include/maplibre_native_c/map.h

/** Screen-space point in logical map pixels. */
typedef struct mln_screen_point {
  double x;
  double y;
} mln_screen_point;
/** Screen-space inset in logical map pixels. */
typedef struct mln_edge_insets {
  double top;
  double left;
  double bottom;
  double right;
} mln_edge_insets;
/** Camera fields used for snapshots and camera commands. */
typedef struct mln_camera_options {
  uint32_t size;
  uint32_t fields;
  double latitude;
  double longitude;
  double center_altitude;
  mln_edge_insets padding;
  /**
   * Screen-space focal point for a camera command. This field is input-only.
   *
   * MapLibre Native applies it to camera commands and leaves it out of every
   * camera snapshot it reports, so MLN_CAMERA_OPTION_ANCHOR is set only by the
   * caller. mln_map_get_camera(), mln_map_projection_get_camera(), and the
   * mln_map_camera_for_* family leave it clear.
   */
  mln_screen_point anchor;
  double zoom;
  double bearing;
  double pitch;
  double roll;
  double field_of_view;
} mln_camera_options;
/** Cubic easing curve for animated camera transitions. */
typedef struct mln_unit_bezier {
  double x1;
  double y1;
  double x2;
  double y2;
} mln_unit_bezier;
/** Optional animation controls for camera transitions. */
typedef struct mln_animation_options {
  uint32_t size;
  uint32_t fields;
  /**
   * Duration in milliseconds. Must be finite and non-negative. Values that
   * would overflow MapLibre Native's internal duration are invalid.
   *
   * When this field is omitted, ease, pan, zoom, rotate, and pitch transitions
   * default to zero and apply instantly, while mln_map_fly_to() derives a
   * duration from velocity instead.
   */
  double duration_ms;
  /**
   * Average flyTo velocity in screenfuls per second. Must be positive.
   * Defaults to 1.2 when omitted. Applies to mln_map_fly_to().
   */
  double velocity;
  /** Peak zoom for flyTo transitions. */
  double min_zoom;
  mln_unit_bezier easing;
  /**
   * Caller-chosen identity for the transition this options struct starts.
   *
   * When MLN_ANIMATION_OPTION_TRANSITION_ID is set, the transition emits one
   * MLN_RUNTIME_EVENT_MAP_CAMERA_TRANSITION_FINISHED event carrying this value
   * in its mln_runtime_event_camera_transition_finished payload. The C API
   * passes the value through without interpreting it, so callers pick their own
   * scheme, such as a monotonically increasing counter.
   *
   * Each transition emits that event exactly once, whichever way it ends:
   * running to completion, being superseded by a later camera command, being
   * cancelled by mln_map_cancel_transitions(), or completing instantly as a
   * zero-duration jump. A command this API rejects -- one carrying a non-finite
   * enabled camera field, for example -- starts no transition and emits no such
   * event. The event carries no completion reason, so a host that needs to tell
   * completion from cancellation compares the resulting camera against the
   * requested one, or tracks which transition ID is current.
   *
   * The event is queued on the runtime that owns the map and is drained by
   * mln_runtime_poll_event(). For a transition that runs to completion, it is
   * queued immediately before that transition's
   * MLN_RUNTIME_EVENT_MAP_CAMERA_DID_CHANGE event.
   *
   * When this field is omitted, the transition emits no such event.
   */
  uint64_t transition_id;
} mln_animation_options;
/** Optional fitting controls for camera-for-viewport queries. */
typedef struct mln_camera_fit_options {
  uint32_t size;
  uint32_t fields;
  mln_edge_insets padding;
  double bearing;
  double pitch;
} mln_camera_fit_options;
/** Three-component vector used by free camera options. */
typedef struct mln_vec3 {
  double x;
  double y;
  double z;
} mln_vec3;
/** Quaternion stored as x, y, z, w components. */
typedef struct mln_quaternion {
  double x;
  double y;
  double z;
  double w;
} mln_quaternion;
/** Free camera position and orientation in MapLibre Native camera space. */
typedef struct mln_free_camera_options {
  uint32_t size;
  uint32_t fields;
  mln_vec3 position;
  mln_quaternion orientation;
} mln_free_camera_options;
/** Geographic coordinate in degrees used by map and projection APIs. */
typedef struct mln_lat_lng {
  /** Latitude in degrees. Input latitude must be finite and within [-90, 90].
   */
  double latitude;
  /** Longitude in degrees. Input longitude must be finite. */
  double longitude;
} mln_lat_lng;
/** UTF-8 text view. The pointer may be null only when size is 0. */
typedef struct mln_string_view {
  /** UTF-8 bytes. Null only when size is 0. */
  const char* data;
  size_t size;
} mln_string_view;
typedef struct mln_json_value mln_json_value;
typedef struct mln_geometry mln_geometry;
/** Coordinate array view. Coordinates are latitude/longitude pairs. */
typedef struct mln_coordinate_span {
  /** Coordinates. Null only when coordinate_count is 0. */
  const mln_lat_lng* coordinates;
  size_t coordinate_count;
} mln_coordinate_span;
/** Polygon ring array view. Each ring is a coordinate span. */
typedef struct mln_polygon_geometry {
  /** Rings. Null only when ring_count is 0. */
  const mln_coordinate_span* rings;
  size_t ring_count;
} mln_polygon_geometry;
/** Multi-line geometry view. Each line is a coordinate span. */
typedef struct mln_multi_line_geometry {
  /** Lines. Null only when line_count is 0. */
  const mln_coordinate_span* lines;
  size_t line_count;
} mln_multi_line_geometry;
/** Multi-polygon geometry view. Each polygon contains ring views. */
typedef struct mln_multi_polygon_geometry {
  /** Polygons. Null only when polygon_count is 0. */
  const mln_polygon_geometry* polygons;
  size_t polygon_count;
} mln_multi_polygon_geometry;
/** Geometry collection view. */
typedef struct mln_geometry_collection {
  /** Child geometries. Null only when geometry_count is 0. */
  const mln_geometry* geometries;
  size_t geometry_count;
} mln_geometry_collection;
/**
 * MapLibre geometry input descriptor graph.
 *
 * Geometry coordinates use mln_lat_lng for consistency with the rest of the C
 * API. They are converted to native geometry points as longitude/latitude.
 * A root geometry descriptor starts at nesting depth 0. Status-returning
 * functions reject geometry collection children past depth 64 with
 * MLN_STATUS_INVALID_ARGUMENT.
 */
typedef struct mln_geometry {
  uint32_t size;
  /** One of mln_geometry_type. */
  uint32_t type;
  union {
    mln_lat_lng point;
    mln_coordinate_span line_string;
    mln_polygon_geometry polygon;
    mln_coordinate_span multi_point;
    mln_multi_line_geometry multi_line_string;
    mln_multi_polygon_geometry multi_polygon;
    mln_geometry_collection geometry_collection;
  } data;
} mln_geometry;
/** JSON value array view. */
typedef struct mln_json_array {
  /** Values. Null only when value_count is 0. */
  const mln_json_value* values;
  size_t value_count;
} mln_json_array;
/** JSON object member view. */
typedef struct mln_json_member {
  mln_string_view key;
  /** Value descriptor. Must not be null. */
  const mln_json_value* value;
} mln_json_member;
/** JSON object member array view. */
typedef struct mln_json_object {
  /** Members. Null only when member_count is 0. */
  const mln_json_member* members;
  size_t member_count;
} mln_json_object;
/**
 * JSON-like value input descriptor graph used by feature properties/states.
 *
 * Input functions reject NaN and infinities for double values because JSON and
 * GeoJSON numbers are finite.
 * A root JSON value descriptor starts at nesting depth 0. Status-returning
 * functions reject array/object children past depth 64 with
 * MLN_STATUS_INVALID_ARGUMENT.
 */
typedef struct mln_json_value {
  uint32_t size;
  /** One of mln_json_value_type. */
  uint32_t type;
  union {
    bool bool_value;
    uint64_t uint_value;
    int64_t int_value;
    double double_value;
    mln_string_view string_value;
    mln_json_array array_value;
    mln_json_object object_value;
  } data;
} mln_json_value;
/** Feature-state source, feature, and key selector. */
typedef struct mln_feature_state_selector {
  uint32_t size;
  uint32_t fields;
  /** Source ID. Required and borrowed for the duration of the call. */
  mln_string_view source_id;
  /** Optional source layer ID. Required for vector-source disambiguation. */
  mln_string_view source_layer_id;
  /** Optional feature ID string. Required by set/get and optional for remove.
   */
  mln_string_view feature_id;
  /** Optional state key. Used only by remove and requires feature_id. */
  mln_string_view state_key;
} mln_feature_state_selector;
/** GeoJSON feature input descriptor graph. */
typedef struct mln_feature {
  uint32_t size;
  /**
   * Geometry descriptor. Must not be null. Use MLN_GEOMETRY_TYPE_EMPTY for an
   * empty geometry.
   */
  const mln_geometry* geometry;
  /** Property member views. May be null only when property_count is 0. */
  const mln_json_member* properties;
  size_t property_count;
  /** One of mln_feature_identifier_type. */
  uint32_t identifier_type;
  union {
    uint64_t uint_value;
    int64_t int_value;
    double double_value;
    mln_string_view string_value;
  } identifier;
} mln_feature;
/** Feature collection view. */
typedef struct mln_feature_collection {
  /** Features. Null only when feature_count is 0. */
  const mln_feature* features;
  size_t feature_count;
} mln_feature_collection;
/**
 * GeoJSON geometry, feature, or feature collection input descriptor graph.
 * Nested geometry and property descriptors share the 64-depth descriptor limit
 * documented on mln_geometry and mln_json_value.
 */
typedef struct mln_geojson {
  uint32_t size;
  /** One of mln_geojson_type. */
  uint32_t type;
  union {
    /**
     * Geometry descriptor selected by MLN_GEOJSON_TYPE_GEOMETRY. Must not be
     * null.
     */
    const mln_geometry* geometry;
    /**
     * Feature descriptor selected by MLN_GEOJSON_TYPE_FEATURE. Must not be
     * null.
     */
    const mln_feature* feature;
    mln_feature_collection feature_collection;
  } data;
} mln_geojson;
/** Geographic bounds in degrees. */
typedef struct mln_lat_lng_bounds {
  mln_lat_lng southwest;
  mln_lat_lng northeast;
} mln_lat_lng_bounds;
/** Optional map camera constraint fields. */
typedef struct mln_bound_options {
  uint32_t size;
  uint32_t fields;
  /** Read when fields contains MLN_BOUND_OPTION_BOUNDS. */
  mln_lat_lng_bounds bounds;
  double min_zoom;
  double max_zoom;
  double min_pitch;
  double max_pitch;
} mln_bound_options;
/**
 * Lower-level Spherical Mercator projected-meter coordinate.
 *
 * Map coordinate conversion APIs use mln_lat_lng. This type is only for
 * Mercator helper functions.
 */
typedef struct mln_projected_meters {
  /** Distance measured northward from the equator, in meters. */
  double northing;
  /** Distance measured eastward from the prime meridian, in meters. */
  double easting;
} mln_projected_meters;
/**
 * MapLibre axonometric rendering options used for snapshots and commands.
 *
 * MapLibre Native names this native type ProjectionMode. It controls the live
 * map render transform, not the geographic coordinate model.
 */
typedef struct mln_projection_mode {
  uint32_t size;
  uint32_t fields;
  /** Enables a non-perspective axonometric render transform. */
  bool axonometric;
  /** Native x-skew factor used by the axonometric transform. */
  double x_skew;
  /** Native y-skew factor used by the axonometric transform. */
  double y_skew;
} mln_projection_mode;
/** Tile prefetch and LOD tuning controls. */
typedef struct mln_map_tile_options {
  uint32_t size;
  uint32_t fields;
  /** Native uint8_t prefetch zoom delta. */
  uint32_t prefetch_zoom_delta;
  double lod_min_radius;
  double lod_scale;
  double lod_pitch_threshold;
  double lod_zoom_shift;
  /** One of mln_tile_lod_mode. */
  uint32_t lod_mode;
} mln_map_tile_options;