bindings/vala/vapi/maplibre-native-c.vapi


    [CCode (cname = "mln_map_tile_options", has_type_id = false)]
    public struct MapTileOptions {
        public uint32 size;
        public uint32 fields;
        public uint32 prefetch_zoom_delta;
        public double lod_min_radius;
        public double lod_scale;
        public double lod_pitch_threshold;
        public double lod_zoom_shift;
        public uint32 lod_mode;
    }

    [SimpleType]
    [CCode (cname = "mln_projected_meters", has_type_id = false)]
    public struct ProjectedMeters {
        public double northing;
        public double easting;
    }

    [SimpleType]
    [CCode (cname = "mln_screen_box", has_type_id = false)]
    public struct ScreenBox {
        public ScreenPoint min;
        public ScreenPoint max;
    }

    [SimpleType]
    [CCode (cname = "mln_screen_line_string", has_type_id = false)]
    public struct ScreenLineString {
        public ScreenPoint* points;
        public size_t point_count;
    }

    [SimpleType]
    [CCode (cname = "mln_coordinate_span", has_type_id = false)]
    public struct CoordinateSpan {
        public LatLng* coordinates;
        public size_t coordinate_count;
    }

    [SimpleType]
    [CCode (cname = "mln_polygon_geometry", has_type_id = false)]
    public struct PolygonGeometry {
        public CoordinateSpan* rings;
        public size_t ring_count;
    }

    [SimpleType]
    [CCode (cname = "mln_multi_line_geometry", has_type_id = false)]
    public struct MultiLineGeometry {
        public CoordinateSpan* lines;
        public size_t line_count;
    }

    [SimpleType]
    [CCode (cname = "mln_multi_polygon_geometry", has_type_id = false)]
    public struct MultiPolygonGeometry {
        public PolygonGeometry* polygons;
        public size_t polygon_count;
    }

    [SimpleType]
    [CCode (cname = "mln_geometry_collection", has_type_id = false)]
    public struct GeometryCollection {
        public void* geometries;
        public size_t geometry_count;
    }

    [SimpleType]
    [CCode (cname = "mln_rendered_query_geometry", has_type_id = false)]
    public struct RenderedQueryGeometry {
        public uint32 size;
        public uint32 type;
        [CCode (cname = "data.point")]
        public ScreenPoint point;
        [CCode (cname = "data.box")]
        public ScreenBox box;
        [CCode (cname = "data.line_string")]
        public ScreenLineString line_string;
    }

    [SimpleType]
    [CCode (cname = "mln_rendered_feature_query_options", has_type_id = false)]
    public struct RenderedFeatureQueryOptions {
        public uint32 size;
        public uint32 fields;
        public StringView* layer_ids;
        public size_t layer_id_count;
        public JsonValue* filter;
    }

    [SimpleType]
    [CCode (cname = "mln_source_feature_query_options", has_type_id = false)]
    public struct SourceFeatureQueryOptions {
        public uint32 size;
        public uint32 fields;
        public StringView* source_layer_ids;
        public size_t source_layer_id_count;
        public JsonValue* filter;
    }

    [CCode (cname = "mln_geometry", has_type_id = false)]
    public struct Geometry {
        public uint32 size;
        public uint32 type;
        [CCode (cname = "data.point")]
        public LatLng point;
        [CCode (cname = "data.line_string")]
        public CoordinateSpan line_string;
        [CCode (cname = "data.polygon")]
        public PolygonGeometry polygon;
        [CCode (cname = "data.multi_point")]
        public CoordinateSpan multi_point;
        [CCode (cname = "data.multi_line_string")]
        public MultiLineGeometry multi_line_string;
        [CCode (cname = "data.multi_polygon")]
        public MultiPolygonGeometry multi_polygon;
        [CCode (cname = "data.geometry_collection")]
        public GeometryCollection geometry_collection;
    }

    [SimpleType]
    [CCode (cname = "mln_json_array", has_type_id = false)]
    public struct JsonArray {
        public void* values;
        public size_t value_count;
    }

    [SimpleType]
    [CCode (cname = "mln_json_member", has_type_id = false)]
    public struct JsonMember {
        public StringView key;
        public void* value;
    }

    [SimpleType]
    [CCode (cname = "mln_json_object", has_type_id = false)]
    public struct JsonObject {
        public JsonMember* members;
        public size_t member_count;
    }

    [CCode (cname = "mln_json_value", has_type_id = false)]
    public struct JsonValue {
        public uint32 size;
        public uint32 type;
        [CCode (cname = "data.bool_value")]
        public bool bool_value;
        [CCode (cname = "data.uint_value")]
        public uint64 uint_value;
        [CCode (cname = "data.int_value")]
        public int64 int_value;
        [CCode (cname = "data.double_value")]
        public double double_value;
        [CCode (cname = "data.string_value")]
        public StringView string_value;
        [CCode (cname = "data.array_value")]
        public JsonArray array_value;
        [CCode (cname = "data.object_value")]
        public JsonObject object_value;
    }

    [CCode (cname = "mln_feature_state_selector", has_type_id = false)]
    public struct FeatureStateSelector {
        public uint32 size;
        public uint32 fields;
        public StringView source_id;
        public StringView source_layer_id;
        public StringView feature_id;
        public StringView state_key;
    }

    [CCode (cname = "mln_feature", has_type_id = false)]
    public struct Feature {
        public uint32 size;
        public Geometry* geometry;
        public JsonMember* properties;
        public size_t property_count;
        public uint32 identifier_type;
        [CCode (cname = "identifier.uint_value")]
        public uint64 identifier_uint_value;
        [CCode (cname = "identifier.int_value")]
        public int64 identifier_int_value;
        [CCode (cname = "identifier.double_value")]
        public double identifier_double_value;
        [CCode (cname = "identifier.string_value")]
        public StringView identifier_string_value;
    }

    [CCode (cname = "mln_queried_feature", has_type_id = false)]
    public struct QueriedFeature {
        public uint32 size;
        public uint32 fields;
        public Feature feature;
        public StringView source_id;
        public StringView source_layer_id;
        public JsonValue* state;
    }

    [SimpleType]
    [CCode (cname = "mln_feature_collection", has_type_id = false)]
    public struct FeatureCollection {
        public Feature* features;
        public size_t feature_count;
    }

    [CCode (cname = "mln_feature_extension_result_info", has_type_id = false)]
    public struct FeatureExtensionResultInfo {
        public uint32 size;
        public uint32 type;
        [CCode (cname = "data.value")]
        public JsonValue* value;
        [CCode (cname = "data.feature_collection")]
        public FeatureCollection feature_collection;
    }

    [CCode (cname = "mln_geojson", has_type_id = false)]
    public struct GeoJson {
        public uint32 size;
        public uint32 type;
        [CCode (cname = "data.geometry")]
        public Geometry* geometry;
        [CCode (cname = "data.feature")]
        public Feature* feature;
        [CCode (cname = "data.feature_collection")]
        public FeatureCollection feature_collection;
    }

    [SimpleType]
    [CCode (cname = "mln_camera_options", has_type_id = false)]
    public struct CameraOptions {
        public uint32 size;
        public uint32 fields;
        public double latitude;
        public double longitude;
        public double center_altitude;
        public EdgeInsets padding;
        public ScreenPoint anchor;
        public double zoom;
        public double bearing;
        public double pitch;
        public double roll;
        public double field_of_view;
    }

    [SimpleType]
    [CCode (cname = "mln_unit_bezier", has_type_id = false)]
    public struct UnitBezier {
        public double x1;
        public double y1;
        public double x2;
        public double y2;
    }

    [CCode (cname = "mln_animation_options", has_type_id = false)]
    public struct AnimationOptions {
        public uint32 size;
        public uint32 fields;
        public double duration_ms;
        public double velocity;
        public double min_zoom;
        public UnitBezier easing;
    }

    [CCode (cname = "mln_camera_fit_options", has_type_id = false)]
    public struct CameraFitOptions {
        public uint32 size;
        public uint32 fields;
        public EdgeInsets padding;
        public double bearing;
        public double pitch;
    }

    [CCode (cname = "mln_bound_options", has_type_id = false)]
    public struct BoundOptions {
        public uint32 size;
        public uint32 fields;
        public LatLngBounds bounds;
        public double min_zoom;
        public double max_zoom;
        public double min_pitch;
        public double max_pitch;
    }

    [CCode (cname = "mln_free_camera_options", has_type_id = false)]
    public struct FreeCameraOptions {
        public uint32 size;
        public uint32 fields;
        public Vec3 position;
        public Quaternion orientation;
    }

    [CCode (cname = "mln_projection_mode", has_type_id = false)]
    public struct ProjectionMode {
        public uint32 size;
        public uint32 fields;
        public bool axonometric;
        public double x_skew;
        public double y_skew;
    }

    [SimpleType]
    [CCode (cname = "mln_render_target_extent", has_type_id = false)]
    public struct RenderTargetExtent {
        public uint32 size;
        public uint32 width;
        public uint32 height;
        public double scale_factor;
    }

    [SimpleType]
    [CCode (cname = "mln_metal_context_descriptor", has_type_id = false)]
    public struct MetalContextDescriptor {
        public uint32 size;
        public void* device;
    }

    [SimpleType]
    [CCode (cname = "mln_vulkan_context_descriptor", has_type_id = false)]
    public struct VulkanContextDescriptor {
        public uint32 size;
        public void* instance;
        public void* physical_device;
        public void* device;
        public void* graphics_queue;
        public uint32 graphics_queue_family_index;
        public void* get_instance_proc_addr;
        public void* get_device_proc_addr;
    }

    [SimpleType]
    [CCode (cname = "mln_wgl_context_descriptor", has_type_id = false)]
    public struct WglContextDescriptor {
        public uint32 size;
        public void* device_context;
        public void* share_context;
        public void* get_proc_address;
    }

    [SimpleType]
    [CCode (cname = "mln_egl_context_descriptor", has_type_id = false)]
    public struct EglContextDescriptor {
        public uint32 size;
        public void* display;
        public void* config;
        public void* share_context;
        public void* get_proc_address;
    }

    [SimpleType]
    [CCode (cname = "mln_opengl_context_descriptor", has_type_id = false)]
    public struct OpenGLContextDescriptor {
        public uint32 size;
        public OpenGLContextPlatform platform;
        [CCode (cname = "data.wgl")]
        public WglContextDescriptor wgl;
        [CCode (cname = "data.egl")]
        public EglContextDescriptor egl;
    }

    [SimpleType]
    [CCode (cname = "mln_metal_owned_texture_descriptor", has_type_id = false)]
    public struct MetalOwnedTextureDescriptor {
        public uint32 size;
        public RenderTargetExtent extent;
        public MetalContextDescriptor context;
    }

    [SimpleType]
    [CCode (cname = "mln_metal_borrowed_texture_descriptor", has_type_id = false)]
    public struct MetalBorrowedTextureDescriptor {
        public uint32 size;
        public RenderTargetExtent extent;
        public void* texture;
    }
